[package]
name = "libzmq-sys"
version = "0.1.4"
authors = ["jean-airoldie <maxence.caron@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
links = "zmq"
build = "build.rs"
description = """
Raw CFFI bindings for libzmq
"""
repository = "https://github.com/jean-airoldie/libzmq-rs"
readme = "README.md"
keywords = ["libzmq", "zmq", "zeromq", "bindings", "cffi"]
categories = ["external-ffi-bindings"]

[badges]
maintenance = { status = "actively-developed" } 

[features]
# Renew the pre-generated `libzmq` bindings.
renew-bindings = ['bindgen']

[dependencies]
libc = "0.2"

[dev-dependencies]
version-sync = "0.8"

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.49.0", optional = true }
# Use `libzmq` version 4.3.2 which is still a dev preview.
zeromq-src = "=0.1.6-preview"
