[package]
name = "libzmq-sys"
version = "0.1.8+4.3.2"
authors = ["jean-airoldie <maxence.caron@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
links = "zmq"
build = "build.rs"
description = """
Raw CFFI bindings for libzmq
"""
repository = "https://github.com/jean-airoldie/libzmq-rs"
readme = "README.md"
keywords = ["libzmq", "zmq", "zeromq", "bindings", "cffi"]
categories = ["external-ffi-bindings"]

[badges]
maintenance = { status = "passively-maintained" } 

[features]
default = ['curve']
curve = []
# Renew the pre-generated `libzmq` bindings.
renew-bindings = ['bindgen']
libsodium = ['libsodium-sys']

[dependencies]
libc = "0.2"
libsodium-sys = { version = "0.2.3", optional = true }

[dev-dependencies]
version-sync = "0.9"

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.53.2", optional = true }
# libzmq 4.3.2
zeromq-src = "0.1.10"
