[package]
name = "libzmq"
version = "0.1.0"
authors = ["jean-airoldie <maxence.caron@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
A strict subset of ØMQ with a high level API.
"""
repository = "https://github.com/jean-airoldie/libzmq-rs"
readme = "../README.md"
keywords = ["libzmq", "zmq", "zeromq", "bindings"]
categories = ["api-bindings", "asynchronous"]
autobenches = false

[badges]
travis-ci = { repository = "jean-airoldie/libzmq-rs", branch = "master" }
maintenance = { status = "actively-developed" } 
is-it-maintained-issue-resolution = { repository = "https://github.com/jean-airoldie/libzmq-rs" }
is-it-maintained-open-issues = { repository = "https://github.com/jean-airoldie/libzmq-rs" }

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-humantime = { git = "https://github.com/tailhook/serde-humantime", branch = "serde_wrapper" }
lazy_static = "1.3.0"
failure = "0.1"
libzmq-sys = { path = "../libzmq-sys", version = "0.1", features = ["draft"] }
bitflags = "1.0"
hashbrown = "0.2"
log = "0.4"

[dev-dependencies]
rand = "0.6"
rand_isaac = "0.1.1"
rand_core = "0.4"
criterion = "0.2"
version-sync = "0.8"

[[bench]]
name = "bench_main"
harness = false
