[package]
name = "libzmq"
version = "0.2.2"
authors = ["jean-airoldie <maxence.caron@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
A strict subset of ØMQ with a high level API.
"""
repository = "https://github.com/jean-airoldie/libzmq-rs"
readme = "../README.md"
keywords = ["libzmq", "zmq", "zeromq", "bindings"]
categories = ["api-bindings", "asynchronous"]
autobenches = false
homepage = "https://jean-airoldie.github.io/libzmq-rs/"

[badges]
maintenance = { status = "actively-developed" } 

[features]
curve = ['libzmq-sys/libsodium']

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "0.1"
serde_with = "1.3.1"
lazy_static = "1.3.0"
failure = "0.1"
libzmq-sys = { path = "../libzmq-sys", version = "0.1.7" }
bitflags = "1.0"
log = "0.4"
uuid = { version = "0.7", features = ["v4"] }
bincode = "1.1"
byteorder = "1.3.1"

[dev-dependencies]
rand = "0.6"
rand_isaac = "0.1.1"
rand_core = "0.4"
criterion = "0.2"
version-sync = "0.8"
quickcheck = "0.8.3"
serde_yaml = "0.8"

[build-dependencies]
flatc-rust = "0.1"

[[example]]
name = "secure_req_rep"
required-features = ['curve']

[[bench]]
required-features = ['curve']
name = "bench_main"
harness = false
